flux/apps/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo
spec:
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
