flux/apps/demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
spec:
  rules:
    - host: demo.mydomain.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: demo
                port:
                  number: 8080
